objects/vlocity_cmt__ProjectItem__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>No Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of this Project Item. Used to identify the Project Item record across Salesforce instances.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemGlobalKey__c</fullName>
        <description>The global key of the referenced item object.</description>
        <label>Item Global Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemId__c</fullName>
        <description>Polymorphic reference to the Salesforce Id of the item object.</description>
        <externalId>true</externalId>
        <label>Item</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemType__c</fullName>
        <description>The type of the referenced item object.</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemVersion__c</fullName>
        <description>The version of the referenced item object, wherever applicable.</description>
        <label>Item Version</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Item</label>
        <referenceTo>vlocity_cmt__ProjectItem__c</referenceTo>
        <relationshipLabel>Project Items</relationshipLabel>
        <relationshipName>ProjectItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProjectId__c</fullName>
        <description>Master-detail reference to the parent project.</description>
        <label>Project</label>
        <referenceTo>vlocity_cmt__Project__c</referenceTo>
        <relationshipLabel>Project Items</relationshipLabel>
        <relationshipName>ProjectItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RootItemId__c</fullName>
        <description>The Salesforce Id of the root project item under whose hierarchy this project item belongs.</description>
        <externalId>true</externalId>
        <label>Root Item</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Project Item</label>
    <nameField>
        <label>Project Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>